--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -14,4 +14,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2.2.0
       - run: yarn install
+      - run: yarn codegen
       - run: yarn build
