--- a/kubernetes/deploy.yml
+++ b/kubernetes/deploy.yml
@@ -1,15 +1,9 @@
 ---
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: phala-chainbridge-graph
-
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: graph-node
-  namespace: phala-chainbridge-graph
+  namespace: phala-chainbridge-subgraph
 spec:
   selector:
     matchLabels:
@@ -61,7 +55,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: graph-node
-  namespace: phala-chainbridge-graph
+  namespace: phala-chainbridge-subgraph
 spec:
   selector:
     app: graph-node
@@ -82,7 +76,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgres
-  namespace: phala-chainbridge-graph
+  namespace: phala-chainbridge-subgraph
 spec:
   selector:
     matchLabels:
@@ -122,7 +116,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: postgres-data
-  namespace: phala-chainbridge-graph
+  namespace: phala-chainbridge-subgraph
 spec:
   accessModes:
     - ReadWriteOnce
@@ -137,7 +131,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres
-  namespace: phala-chainbridge-graph
+  namespace: phala-chainbridge-subgraph
 spec:
   selector:
     app: postgres
@@ -150,7 +144,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ipfs
-  namespace: phala-chainbridge-graph
+  namespace: phala-chainbridge-subgraph
 spec:
   selector:
     matchLabels:
@@ -194,7 +188,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: ipfs-data
-  namespace: phala-chainbridge-graph
+  namespace: phala-chainbridge-subgraph
 spec:
   accessModes:
     - ReadWriteOnce
@@ -209,7 +203,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ipfs-admin
-  namespace: phala-chainbridge-graph
+  namespace: phala-chainbridge-subgraph
 spec:
   selector:
     app: ipfs
@@ -222,7 +216,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ipfs-gateway
-  namespace: phala-chainbridge-graph
+  namespace: phala-chainbridge-subgraph
 spec:
   selector:
     app: ipfs
